--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.0.0",
